--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -40,7 +40,7 @@
   <!-- Toast Notification Container -->
   <div id="toastContainer" class="fixed top-4 right-4 z-50 space-y-2"></div>
   
-  <%- include('partials/app-sidebar', { currentPage: 'dashboard' }) %>
+  <%- include('partials/app-sidebar', { currentPage: typeof currentPage !== 'undefined' ? currentPage : 'dashboard' }) %>
   
   <div class="lg:pl-64">
     <%- include('partials/app-header', { lastRefresh: typeof lastRefresh !== 'undefined' ? lastRefresh : null }) %>
